--- a/index.html
+++ b/index.html
@@ -4,8 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- Google Fonts -->
+    <!-- Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    <!-- Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <!-- Navegacion -->
+    <header class="header">
+        <div class="header__container">
+            <div class="header__container--logo">
+                <img src="./src/assets/icons/file-code.svg" alt="logo Joan Jimenez">
+                <span>Joan Jimenez</span>
+            </div>
+            <div class="header__container--nav">
+                <img src="./src/assets/icons/list-chevrons-up-down.svg" alt="">
+            </div>
+        </div>
+    </header>
+
+    <!-- Contenido principal -->
+    <main>
+        <!-- Hero section -->
+        <section class="hero">
+            <div class="hero__container">
+                <div class="hero__container--text">
+                    <h1>Joan Jimenez</h1>
+                    <p>Full Stack Developer</p>
+
+                    <div class="hero__buttons">
+                        <button>Ver Proyectos</button>
+                        <button>CV</button>
+                    </div>
+                </div>
+
+                <img class="hero__container--img" src="./src/assets/icons/circle-user.svg" alt="">
+            </div>
+        </section>
+
+        <!-- About section -->
+        <section class="about">
+            <div class="about__container">
+                <div class="about__container--text">
+                    <h2>Sobre mi</h2>
+                    <p>Soy un apasionado desarrollador de aplicaciones web con un enfoque en la creación de experiencias de usuario intuitivas y eficientes. Mi objetivo es transformar ideas complejas en soluciones web elegantes y funcionales.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="projects">
+            <div class="projects__container">
+                <div class="projects__container--text">
+                    <h2>Proyectos</h2>
+                    <p>Algunos de mis proyectos más destacados:</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="skills">
+            <div class="skills__container">
+                <div class="skills__container--text">
+                    <h2>Habilidades</h2>
+                    <p>Algunas de mis habilidades más destacadas:</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="contact">
+            <div class="contact__container">
+                <div class="contact__container--text">
+                    <h2>Contacto</h2>
+                    <p>Si tienes alguna pregunta o sugerencia, no dudes en contactarme:</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer__container">
+            <div class="footer__container--text">
+                <h2>Joan Jimenez</h2>
+                <p>Full Stack Developer</p>
+            </div>
+        </div>
+    </footer>
+
+    <script type="module" src="/src/scripts/main.js"></script>
 </body>
 </html>
